--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,6 +26,9 @@ difficulties:
     
     #Should players on this difficulty lose hunger?
     lose-hunger: true
+    
+    #Multiplier for experience dropped by mobs. 0.0 will make them drop no experience.
+    mob-experience-multiplier: 1.0
 
   normal:
     display: '&e&lNormal'
@@ -39,6 +42,7 @@ difficulties:
     pvp-multiplier: 1.0
     pve-multiplier: 1.0
     lose-hunger: true
+    mob-experience-multiplier: 1.0
     
   hard:
     display: '&c&lHard'
@@ -52,3 +56,4 @@ difficulties:
     pvp-multiplier: 1.25
     pve-multiplier: 1.25
     lose-hunger: true
+    mob-experience-multiplier: 1.5
